Setting: Remove the lock screen and default never sleeps
Change-Id: I6c5af661d093fc10e3dc65d3ec2970a7971b29e9
Signed-off-by: Goenjoy Huang <goenjoy@khadas.com>

--- a/overlay/frameworks/base/packages/SettingsProvider/res/values/defaults.xml
+++ b/overlay/frameworks/base/packages/SettingsProvider/res/values/defaults.xml
@@ -17,7 +17,8 @@
  */
 -->
 <resources>
-    <integer name="def_screen_off_timeout">60000</integer>
+    <integer name="def_screen_off_timeout">2147483647</integer>
+	<bool name="def_lockscreen_disabled">true</bool>
    <!-- Initial value for the Settings.Secure.IMMERSIVE_MODE_CONFIRMATIONS setting,
          which is a comma separated list of packages that no longer need confirmation
          for immersive mode.
